# codeforces

./: .clangd  1.cpp  1020B.cpp  1536B  1800D  1800D.cpp  MEX.cpp  a  a.cpp  a.out  b.cpp  c.cpp  ccpp.zsh  d.cpp  gen.cpp  keybindings.json  n_cycles.cpp  output.out  temp.cpp  threeactivities  threeactivities.cpp
.cph/: .C_To_Become_Max.cpp_4aae920ebc9a19f9b314c14635113976.prob
.zed/: settings.json
1000/: a  a.cpp  b  c  c.cpp
1002/: b
1004/: a
1016/: a.cpp  b.cpp  d.cpp  e.cpp  f.cpp
1025/: a.cpp  a.out  b.cpp
1027/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  e.cpp  temp.cpp
1028/: a.cpp  b.cpp  c.cpp
1029/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
1042/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp  temp.cpp
1300/: 1498B.cpp  1561C.cpp  1601A.cpp  1775B.cpp  temp.cpp
2025_26_ICPC_NERC_Northern_Eurasia_Finals/: a.cpp  a.out  h.cpp
2051/: d  d.cpp
2055/: a  a.cpp  b  c.cpp  d.cpp
2056/: c.cpp  welcome_generator.py
2098/: a  a.cpp
974/: b.cpp
975/: a.cpp
976/: a  b  b.cpp  c  d.cpp
995/: A  A.cpp  B.cpp
999/: d  d.cpp  e  e.cpp  g.cpp
Algorithms/: 3Sum_2.cpp  arraydemo.cpp  ccpp copy.zsh  circular_queue_demo  complex.cpp  filehandling  filehandling.cpp  generate_permutations.java  hamiltonian_cycle.java  infix_to_postfix_prefix.c  josephus_game.java  kadane_maximum_subarray.cpp  knight_tour.java  ll  ll.cpp  manachers.java  maximum_subarray.cpp  maximum_subarray.h  minmax.cpp  missing_element.cpp  modulus_demo.cpp  (+13 more)
cmake_demo/: CMakeLists.txt
cmake_demo/include/: logic.hpp
cmake_demo/src/: logic.cpp  main.cpp
(+1089 files in other folders)
